<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:checked="true"
        android:id="@id/home"
        android:icon="@drawable/home"
        android:title="@string/home" />


    <item
        android:id="@id/cart"
        android:icon="@drawable/cart"
        android:title="@string/cart" />

    <item
        android:id="@id/categories"
        android:title="@string/categories" />


    <item
        android:icon="@drawable/notification_icon"
        android:id="@id/notificationFragment"
        android:title="Notification"
        />

    <item
        android:id="@id/order"
        android:title="@string/order" />

    <item
        android:id="@id/wish_list"
        android:title="@string/wish_list"
        />


    <item android:id="@id/profile_fragment"
         android:title="Profile"
        />


    <item
        android:id="@id/sign_out"
        android:title="@string/sign_out" />


</menu>