...

<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
<!--            android:id="@+id/coordinatorLayout"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="0dp"-->
<!--            android:background="@drawable/drawerstyle"-->
<!--            app:layout_constraintBottom_toTopOf="@+id/navigationView"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="0.0"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:layout_constraintVertical_chainStyle="packed"-->
<!--            app:layout_constraintVertical_weight="30"-->
...
<!--                app:civ_border_width="2dp"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent" />-->

<!--            <TextView-->
<!--                android:id="@+id/profile_text"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginStart="32dp"-->
<!--                android:layout_marginBottom="16dp"-->
<!--                android:textColor="#F2FFFFFF"-->
<!--                android:text="shahzaib lashari"-->
...
