...
            bind:itemTextColor="@color/iconColor"
            bind:itemIconTint="@color/iconColor"
            app:menu="@menu/bottom_nav" />

    </LinearLayout>
<!--    <androidx.drawerlayout.widget.DrawerLayout-->
<!--        android:id="@+id/drawer_layout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:background="@color/drawercolor"-->
<!--        tools:context=".ui.mainactivity.MainActivity"-->
<!--        tools:openDrawer="start"-->
<!--        >-->
...
